--- a/Carp/View/Car/CarView.xib
+++ b/Carp/View/Car/CarView.xib
@@ -37,6 +37,9 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LJl-NI-ZDZ">
                             <rect key="frame" x="0.0" y="50" width="375" height="426"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="370" id="jpB-CF-s0y"/>
+                            </constraints>
                         </view>
                     </subviews>
                 </stackView>
