--- a/Carp/View/Results View/ResultsView.xib
+++ b/Carp/View/Results View/ResultsView.xib
@@ -12,13 +12,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ResultsView" customModule="Carp" customModuleProvider="target">
             <connections>
-                <outlet property="buttonsView" destination="kV3-eV-UQu" id="IFK-at-jeW"/>
-                <outlet property="chatButton" destination="lwu-Eu-oft" id="tHW-ii-f80"/>
                 <outlet property="containerView" destination="mLu-wx-bGu" id="Lf3-BD-joR"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="xc9-WO-V2c"/>
                 <outlet property="newCarLabel" destination="rIh-IM-w5I" id="fVL-ss-fHF"/>
                 <outlet property="newCarLabelView" destination="QAz-Ax-hIh" id="Kmd-F0-BWz"/>
-                <outlet property="resultsButton" destination="sL2-Dw-6Pv" id="5eN-xu-bEg"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -26,90 +23,46 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="518"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="jZp-v2-2aL">
-                    <rect key="frame" x="0.0" y="20" width="375" height="125"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QAz-Ax-hIh">
+                    <rect key="frame" x="0.0" y="20" width="375" height="55"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kV3-eV-UQu">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sL2-Dw-6Pv">
-                                    <rect key="frame" x="0.0" y="0.0" width="187.5" height="70"/>
-                                    <connections>
-                                        <action selector="didTapResultsButton:" destination="-1" eventType="touchUpInside" id="phV-kL-Ayt"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lwu-Eu-oft">
-                                    <rect key="frame" x="187.5" y="0.0" width="187.5" height="70"/>
-                                    <connections>
-                                        <action selector="didTapCarButton:" destination="-1" eventType="touchUpInside" id="xQ7-Kx-9fj"/>
-                                    </connections>
-                                </button>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pAT-99-IzY">
-                                    <rect key="frame" x="187" y="17.5" width="1" height="35"/>
-                                    <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="1" id="54b-77-wsR"/>
-                                    </constraints>
-                                </view>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x92-gT-kHp">
+                            <rect key="frame" x="0.0" y="54.5" width="375" height="0.5"/>
+                            <color key="backgroundColor" red="0.74509803921568629" green="0.74509803921568629" blue="0.74509803921568629" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="70" id="Aco-Az-f1K"/>
-                                <constraint firstItem="lwu-Eu-oft" firstAttribute="top" secondItem="kV3-eV-UQu" secondAttribute="top" id="FCl-RX-KVG"/>
-                                <constraint firstAttribute="trailing" secondItem="lwu-Eu-oft" secondAttribute="trailing" id="IOE-M0-1kV"/>
-                                <constraint firstItem="sL2-Dw-6Pv" firstAttribute="top" secondItem="kV3-eV-UQu" secondAttribute="top" id="LnP-os-XVF"/>
-                                <constraint firstItem="sL2-Dw-6Pv" firstAttribute="width" secondItem="kV3-eV-UQu" secondAttribute="width" multiplier="0.5" id="TYg-XB-ZZ9"/>
-                                <constraint firstItem="lwu-Eu-oft" firstAttribute="width" secondItem="kV3-eV-UQu" secondAttribute="width" multiplier="0.5" id="bzc-2b-zJB"/>
-                                <constraint firstAttribute="bottom" secondItem="sL2-Dw-6Pv" secondAttribute="bottom" id="haF-gi-06z"/>
-                                <constraint firstAttribute="bottom" secondItem="lwu-Eu-oft" secondAttribute="bottom" id="hbq-wh-oeC"/>
-                                <constraint firstItem="pAT-99-IzY" firstAttribute="height" secondItem="sL2-Dw-6Pv" secondAttribute="height" multiplier="0.5" id="idd-Bf-vv3"/>
-                                <constraint firstItem="pAT-99-IzY" firstAttribute="centerY" secondItem="kV3-eV-UQu" secondAttribute="centerY" id="o4o-mp-L3G"/>
-                                <constraint firstItem="sL2-Dw-6Pv" firstAttribute="leading" secondItem="kV3-eV-UQu" secondAttribute="leading" id="q9A-Ce-IoM"/>
-                                <constraint firstItem="pAT-99-IzY" firstAttribute="centerX" secondItem="kV3-eV-UQu" secondAttribute="centerX" id="zdm-X8-xHU"/>
+                                <constraint firstAttribute="height" constant="0.5" id="D4N-dF-oqv"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QAz-Ax-hIh">
-                            <rect key="frame" x="0.0" y="70" width="375" height="55"/>
-                            <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x92-gT-kHp">
-                                    <rect key="frame" x="0.0" y="54.5" width="375" height="0.5"/>
-                                    <color key="backgroundColor" red="0.74509803921568629" green="0.74509803921568629" blue="0.74509803921568629" alpha="1" colorSpace="calibratedRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="0.5" id="D4N-dF-oqv"/>
-                                    </constraints>
-                                </view>
-                                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rIh-IM-w5I">
-                                    <rect key="frame" x="82" y="18.5" width="211.5" height="18"/>
-                                    <gestureRecognizers/>
-                                    <attributedString key="attributedText">
-                                        <fragment content="Deseja criar o seu próprio carro?">
-                                            <attributes>
-                                                <color key="NSColor" red="0.2196078431372549" green="0.5607843137254902" blue="0.40784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <font key="NSFont" size="15" name="Lato-Regular"/>
-                                                <integer key="NSUnderline" value="1"/>
-                                            </attributes>
-                                        </fragment>
-                                    </attributedString>
-                                    <nil key="highlightedColor"/>
-                                    <connections>
-                                        <outletCollection property="gestureRecognizers" destination="z3Z-AP-ziX" appends="YES" id="mCj-Hc-mne"/>
-                                    </connections>
-                                </label>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="bottom" secondItem="x92-gT-kHp" secondAttribute="bottom" id="6WU-kj-dpQ"/>
-                                <constraint firstAttribute="height" constant="55" id="Em5-ij-yqD"/>
-                                <constraint firstAttribute="trailing" secondItem="x92-gT-kHp" secondAttribute="trailing" id="VeR-V3-pkD"/>
-                                <constraint firstItem="rIh-IM-w5I" firstAttribute="centerY" secondItem="QAz-Ax-hIh" secondAttribute="centerY" id="byp-3x-Wn7"/>
-                                <constraint firstItem="x92-gT-kHp" firstAttribute="leading" secondItem="QAz-Ax-hIh" secondAttribute="leading" id="kyP-ag-Man"/>
-                                <constraint firstItem="rIh-IM-w5I" firstAttribute="centerX" secondItem="QAz-Ax-hIh" secondAttribute="centerX" id="y6o-CM-vj0"/>
-                            </constraints>
-                        </view>
+                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rIh-IM-w5I">
+                            <rect key="frame" x="82" y="18.5" width="211.5" height="18"/>
+                            <gestureRecognizers/>
+                            <attributedString key="attributedText">
+                                <fragment content="Deseja criar o seu próprio carro?">
+                                    <attributes>
+                                        <color key="NSColor" red="0.2196078431372549" green="0.5607843137254902" blue="0.40784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <font key="NSFont" size="15" name="Lato-Regular"/>
+                                        <integer key="NSUnderline" value="1"/>
+                                    </attributes>
+                                </fragment>
+                            </attributedString>
+                            <nil key="highlightedColor"/>
+                            <connections>
+                                <outletCollection property="gestureRecognizers" destination="z3Z-AP-ziX" appends="YES" id="mCj-Hc-mne"/>
+                            </connections>
+                        </label>
                     </subviews>
-                </stackView>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="x92-gT-kHp" secondAttribute="trailing" id="5m9-1v-gAU"/>
+                        <constraint firstAttribute="height" constant="55" id="Em5-ij-yqD"/>
+                        <constraint firstAttribute="bottom" secondItem="x92-gT-kHp" secondAttribute="bottom" id="Fkh-4m-vU4"/>
+                        <constraint firstItem="x92-gT-kHp" firstAttribute="leading" secondItem="QAz-Ax-hIh" secondAttribute="leading" id="UZQ-r7-Zqn"/>
+                        <constraint firstItem="rIh-IM-w5I" firstAttribute="centerY" secondItem="QAz-Ax-hIh" secondAttribute="centerY" id="byp-3x-Wn7"/>
+                        <constraint firstItem="rIh-IM-w5I" firstAttribute="centerX" secondItem="QAz-Ax-hIh" secondAttribute="centerX" id="y6o-CM-vj0"/>
+                    </constraints>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mLu-wx-bGu">
-                    <rect key="frame" x="0.0" y="145" width="375" height="373"/>
+                    <rect key="frame" x="0.0" y="75" width="375" height="443"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="370" id="DDZ-Lv-clF"/>
@@ -119,11 +72,11 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="mLu-wx-bGu" secondAttribute="bottom" id="Bo0-Qn-eBG"/>
-                <constraint firstItem="jZp-v2-2aL" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="MrJ-9c-fX1"/>
-                <constraint firstItem="jZp-v2-2aL" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="STl-EW-WQ9"/>
+                <constraint firstItem="QAz-Ax-hIh" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="Qu9-UZ-Z6W"/>
+                <constraint firstItem="QAz-Ax-hIh" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="TX3-g1-DXj"/>
                 <constraint firstItem="mLu-wx-bGu" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="X3x-lv-XNa"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jZp-v2-2aL" secondAttribute="trailing" id="l68-Gp-9Qy"/>
-                <constraint firstItem="mLu-wx-bGu" firstAttribute="top" secondItem="jZp-v2-2aL" secondAttribute="bottom" id="tf9-gv-GZb"/>
+                <constraint firstItem="mLu-wx-bGu" firstAttribute="top" secondItem="QAz-Ax-hIh" secondAttribute="bottom" id="oNf-t0-kqI"/>
+                <constraint firstItem="QAz-Ax-hIh" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="srU-sL-4D2"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="mLu-wx-bGu" secondAttribute="trailing" id="y1n-WK-tUP"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
